// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly a11y renders correctly with a11y props (false) 1`] = `
<button
  aria-controls="area"
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup={false}
  aria-label="text"
  aria-labelledby="id"
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly a11y renders correctly with a11y props (true) 1`] = `
<button
  aria-controls="area"
  aria-disabled={false}
  aria-expanded={true}
  aria-haspopup={true}
  aria-label="text"
  aria-labelledby="id"
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- negative 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-negative"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- on-inverted-background 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-on-inverted-background"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- on-primary-color 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-on-primary-color"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- positive 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-positive"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- primary 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button kind- primary 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button kind- secondary 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-secondary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button kind- tertiary 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-tertiary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button size- large 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-large monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button size- medium 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button size- small 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-small monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with callbacks 1`] = `
<button
  aria-disabled={false}
  className="test monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with className 1`] = `
<button
  aria-disabled={false}
  className="test monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with empty props 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with id 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button_test"
  id="test"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with leftIcon 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <div
    data-testid="icon-mock"
  />
  Button
</button>
`;

exports[`Button renders correctly renders correctly with props change ui 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary monday-style-button--color-primary-active monday-style-button--margin-right monday-style-button--margin-left monday-style-button--right-flat monday-style-button--left-flat monday-style-button--no-side-padding"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with rightIcon 1`] = `
<button
  aria-disabled={false}
  className="monday-style-button monday-style-button--size-medium monday-style-button--kind-primary monday-style-button--color-primary"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
  <div
    data-testid="icon-mock"
  />
</button>
`;
